:fire: clean up notebooks

--- a/notebooks/AllExperimentsHumanRecognition.ipynb
+++ b/notebooks/AllExperimentsHumanRecognition.ipynb
@@ -17,13 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.io import loadmat\n",
-    "import matplotlib.image\n",
     "import matplotlib\n",
     "%matplotlib inline\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
-    "import urllib.request, json \n",
+    "import urllib.request, json\n",
     "from model_analysis_folders import all_model_info\n",
     "\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
@@ -220,11 +218,12 @@
     "# This ordering of experiments matches the ordering for when experiments appear in Feather et al. 2023.\n",
     "# Matches Supplementary Table 5\n",
     "\n",
-    "experiment_list = [1,12,5,16,10,6,3,4,9]\n",
+    "experiment_list = [1, 12, 5, 16, 10, 6, 3, 4, 9]\n",
     "\n",
     "for exp_num in experiment_list:\n",
-    "    experiment_name = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['paper_experiment_name']\n",
-    "    jsin_configs = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['experiment_params_web']\n",
+    "    experiment_name = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num][\n",
+    "        'paper_experiment_name']\n",
+    "    jsin_configs = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num]['experiment_params_web']\n",
     "\n",
     "    # TODO: where to save these? \n",
     "    # Can we pull it directly from the mcdermott server? \n",
@@ -235,31 +234,30 @@
     "    plot_model_order = experiment_params['experiment_info']['networks']\n",
     "\n",
     "    print(experiment_name)\n",
-    "    plt.figure(figsize=(len(experiment_params['experiment_info']['networks'])*2,2))\n",
-    "\n",
+    "    plt.figure(figsize=(len(experiment_params['experiment_info']['networks']) * 2, 2))\n",
     "\n",
     "    for n_idx, network in enumerate(experiment_params['experiment_info']['networks']):\n",
     "        model_name = all_model_info.ALL_NETWORKS_AND_LAYERS_IMAGES[network]['paper_name']\n",
-    "        network_plot_idx = plot_model_order.index(network)+1\n",
-    "        ax = plt.subplot(1,len(experiment_params['experiment_info']['networks']), network_plot_idx)\n",
-    "\n",
+    "        network_plot_idx = plot_model_order.index(network) + 1\n",
+    "        ax = plt.subplot(1, len(experiment_params['experiment_info']['networks']), network_plot_idx)\n",
     "\n",
     "        participant_data_matrix, model_layers, conditions, participants = unpack_experiment_mat(\n",
-    "            '../VisionBehavioralExperiments/EXP%d_ANALYSIS/VisionExperiment%d_network_vs_humans_datamatrix_%s_public.mat'%(exp_num, exp_num, network))\n",
+    "            '../VisionBehavioralExperiments/EXP%d_ANALYSIS/VisionExperiment%d_network_vs_humans_datamatrix_%s_public.mat' % (\n",
+    "            exp_num, exp_num, network))\n",
     "\n",
-    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:,:,0],0), \n",
-    "                     yerr=np.std(participant_data_matrix[:,:,0],0)/np.sqrt(len(participants)),\n",
+    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:, :, 0], 0),\n",
+    "                     yerr=np.std(participant_data_matrix[:, :, 0], 0) / np.sqrt(len(participants)),\n",
     "                     color='k', label=conditions[0], linewidth=0.75)\n",
-    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:,:,1],0), \n",
-    "                     yerr=np.std(participant_data_matrix[:,:,1],0)/np.sqrt(len(participants)),\n",
+    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:, :, 1], 0),\n",
+    "                     yerr=np.std(participant_data_matrix[:, :, 1], 0) / np.sqrt(len(participants)),\n",
     "                     color='k', linestyle='--', label=conditions[1], linewidth=0.75)\n",
     "\n",
-    "        plt.plot(range(len(model_layers)), np.ones(len(model_layers))*1/16, \n",
-    "                 color='grey', label='Chance', linewidth=0.75)    \n",
-    "        plt.ylim(0,1)\n",
+    "        plt.plot(range(len(model_layers)), np.ones(len(model_layers)) * 1 / 16,\n",
+    "                 color='grey', label='Chance', linewidth=0.75)\n",
+    "        plt.ylim(0, 1)\n",
     "        plt.yticks(fontsize=8)\n",
-    "        plt.xticks(ticks=range(len(model_layers)), \n",
-    "                   labels=[layer.split('_fake_relu')[0] for layer in model_layers], \n",
+    "        plt.xticks(ticks=range(len(model_layers)),\n",
+    "                   labels=[layer.split('_fake_relu')[0] for layer in model_layers],\n",
     "                   rotation=90, fontsize=8)\n",
     "\n",
     "        plt.title(model_name, fontsize=10)\n",
@@ -273,7 +271,7 @@
     "            ax.get_yaxis().set_ticklabels([])\n",
     "        else:\n",
     "            plt.ylabel('Proportion Correct', fontsize=10)\n",
-    "            \n",
+    "\n",
     "    plt.show()\n"
    ]
   },
@@ -406,11 +404,12 @@
    ],
    "source": [
     "# This ordering of experiments matches the ordering for when experiments appear in Feather et al. 2022. \n",
-    "experiment_list = [1,6,3,4,7,8]\n",
+    "experiment_list = [1, 6, 3, 4, 7, 8]\n",
     "\n",
     "for exp_num in experiment_list:\n",
-    "    experiment_name = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['paper_experiment_name']\n",
-    "    jsin_configs = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['experiment_params_web']\n",
+    "    experiment_name = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num][\n",
+    "        'paper_experiment_name']\n",
+    "    jsin_configs = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num]['experiment_params_web']\n",
     "\n",
     "    # TODO: where to save these? \n",
     "    # Can we pull it directly from the mcdermott server? \n",
@@ -421,32 +420,31 @@
     "    plot_model_order = experiment_params['experiment_info']['networks']\n",
     "\n",
     "    print(experiment_name)\n",
-    "    plt.figure(figsize=(len(experiment_params['experiment_info']['networks'])*2,2))\n",
-    "\n",
+    "    plt.figure(figsize=(len(experiment_params['experiment_info']['networks']) * 2, 2))\n",
     "\n",
     "    for n_idx, network in enumerate(experiment_params['experiment_info']['networks']):\n",
     "        model_name = all_model_info.ALL_NETWORKS_AND_LAYERS_AUDIO[network]['paper_name']\n",
-    "        network_plot_idx = plot_model_order.index(network)+1\n",
-    "        ax = plt.subplot(1,len(experiment_params['experiment_info']['networks']), network_plot_idx)\n",
-    "\n",
+    "        network_plot_idx = plot_model_order.index(network) + 1\n",
+    "        ax = plt.subplot(1, len(experiment_params['experiment_info']['networks']), network_plot_idx)\n",
     "\n",
     "        participant_data_matrix, model_layers, conditions, participants = unpack_experiment_mat(\n",
-    "            '../AuditoryBehavioralExperiments/EXPERIMENT_%d/AudioExperiment%d_network_vs_humans_datamatrix_%s_public.mat'%(exp_num, exp_num, network))\n",
-    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:,:,0],0), \n",
-    "                     yerr=np.std(participant_data_matrix[:,:,0],0)/np.sqrt(len(participants)),\n",
+    "            '../AuditoryBehavioralExperiments/EXPERIMENT_%d/AudioExperiment%d_network_vs_humans_datamatrix_%s_public.mat' % (\n",
+    "            exp_num, exp_num, network))\n",
+    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:, :, 0], 0),\n",
+    "                     yerr=np.std(participant_data_matrix[:, :, 0], 0) / np.sqrt(len(participants)),\n",
     "                     color='k', label=conditions[0], linewidth=0.75)\n",
-    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:,:,1],0), \n",
-    "                     yerr=np.std(participant_data_matrix[:,:,1],0)/np.sqrt(len(participants)),\n",
+    "        plt.errorbar(range(len(model_layers)), np.mean(participant_data_matrix[:, :, 1], 0),\n",
+    "                     yerr=np.std(participant_data_matrix[:, :, 1], 0) / np.sqrt(len(participants)),\n",
     "                     color='k', linestyle='--', label=conditions[1], linewidth=0.75)\n",
     "\n",
     "        # Note: the network chance performance is 1/794 (because the network can choose \"null\" as a class). \n",
     "        # Human class performance is used, but is really indistinguishable when plotted... \n",
-    "        plt.plot(range(len(model_layers)), np.ones(len(model_layers))*1/793, \n",
-    "                 color='grey', label='Chance', linewidth=0.75)    \n",
-    "        plt.ylim(0,1)\n",
+    "        plt.plot(range(len(model_layers)), np.ones(len(model_layers)) * 1 / 793,\n",
+    "                 color='grey', label='Chance', linewidth=0.75)\n",
+    "        plt.ylim(0, 1)\n",
     "        plt.yticks(fontsize=8)\n",
-    "        plt.xticks(ticks=range(len(model_layers)), \n",
-    "                   labels=[layer.split('_fake_relu')[0] for layer in model_layers], \n",
+    "        plt.xticks(ticks=range(len(model_layers)),\n",
+    "                   labels=[layer.split('_fake_relu')[0] for layer in model_layers],\n",
     "                   rotation=90, fontsize=8)\n",
     "\n",
     "        plt.title(model_name, fontsize=10)\n",
@@ -460,23 +458,9 @@
     "            ax.get_yaxis().set_ticklabels([])\n",
     "        else:\n",
     "            plt.ylabel('Proportion Correct', fontsize=10)\n",
-    "            \n",
+    "\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
