--- a/notebooks/BrainscoreResultsVsMetamerRecognition.ipynb
+++ b/notebooks/BrainscoreResultsVsMetamerRecognition.ipynb
@@ -16,33 +16,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "import pandas as pd\n",
-    "import os \n",
-    "import glob\n",
-    "import math\n",
-    "import json\n",
-    "import scipy\n",
-    "import scipy.stats\n",
     "%matplotlib inline\n",
-    "import matplotlib.pylab as plt\n",
-    "import matplotlib\n",
-    "import pickle as pckl\n",
-    "from PIL import Image\n",
-    "import seaborn as sns\n",
     "\n",
     "import urllib.request, json\n",
-    "from scipy.io import loadmat\n",
-    "import random\n",
     "\n",
-    "import sys\n",
-    "from model_analysis_folders import all_model_info\n",
+    "from notebooks.notebook_helpers import responses_network_by_layer_mat, combined_experiment_response_dictionaries, \\\n",
+    "    unpack_experiment_mat\n",
     "\n",
-    "from notebooks.notebook_helpers import responses_network_by_layer_mat, combined_experiment_response_dictionaries, unpack_experiment_mat\n",
-    "\n",
-    "from notebooks.vision_brainscore_notebook_helpers import * \n",
+    "from notebooks.vision_brainscore_notebook_helpers import *\n",
     "\n",
     "import matplotlib\n",
+    "\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
     "matplotlib.rcParams['ps.fonttype'] = 42\n",
     "\n",
@@ -90,23 +76,26 @@
    "outputs": [],
    "source": [
     "# Load in the metamer recogntion values for the experiments\n",
-    "experiment_list = [1,5,3,4,9,10,12,16] \n",
+    "experiment_list = [1, 5, 3, 4, 9, 10, 12, 16]\n",
     "all_experiment_dictionaries = []\n",
     "\n",
     "for exp_num in experiment_list:\n",
-    "    experiment_name = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['paper_experiment_name']\n",
-    "    jsin_configs = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['experiment_params_web']\n",
+    "    experiment_name = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num][\n",
+    "        'paper_experiment_name']\n",
+    "    jsin_configs = all_model_info.TURK_IMAGE_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num]['experiment_params_web']\n",
     "\n",
     "    with urllib.request.urlopen(jsin_configs) as url:\n",
     "        experiment_params = json.loads(url.read().decode())\n",
     "\n",
     "    plot_model_order = experiment_params['experiment_info']['networks']\n",
-    "    \n",
+    "\n",
     "    exp_response_dict = {}\n",
     "    for n_idx, network in enumerate(experiment_params['experiment_info']['networks']):\n",
     "        participant_data_matrix, model_layers, conditions, participants = unpack_experiment_mat(\n",
-    "            '../VisionBehavioralExperiments/EXP%d_ANALYSIS/VisionExperiment%d_network_vs_humans_datamatrix_%s_public.mat'%(exp_num, exp_num, network))\n",
-    "        exp_response_dict[network] = responses_network_by_layer_mat(participant_data_matrix, model_layers, conditions, experiment_params)\n",
+    "            '../VisionBehavioralExperiments/EXP%d_ANALYSIS/VisionExperiment%d_network_vs_humans_datamatrix_%s_public.mat' % (\n",
+    "            exp_num, exp_num, network))\n",
+    "        exp_response_dict[network] = responses_network_by_layer_mat(participant_data_matrix, model_layers, conditions,\n",
+    "                                                                    experiment_params)\n",
     "\n",
     "    all_experiment_dictionaries.append(exp_response_dict)\n",
     "\n",
@@ -142,27 +131,13 @@
     }
    ],
    "source": [
-    "plot_brainscore_analysis_scatter(brainscore_df, \n",
-    "                                     models_to_evaluate,\n",
-    "                                     model_cmap_dict,\n",
-    "                                     model_style_dict,\n",
-    "                                     combined_experiment_dict,\n",
-    "                                     brain_comparisons = ['V1', 'V2', 'V4', 'IT'])"
+    "plot_brainscore_analysis_scatter(brainscore_df,\n",
+    "                                 models_to_evaluate,\n",
+    "                                 model_cmap_dict,\n",
+    "                                 model_style_dict,\n",
+    "                                 combined_experiment_dict,\n",
+    "                                 brain_comparisons=['V1', 'V2', 'V4', 'IT'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
