--- a/notebooks/fMRIBestLayerVsMetamerRecognition.ipynb
+++ b/notebooks/fMRIBestLayerVsMetamerRecognition.ipynb
@@ -20,29 +20,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy.io import loadmat\n",
-    "import pickle as pckl\n",
-    "import os\n",
     "\n",
-    "import matplotlib.pylab as plt\n",
+    "\n",
     "import matplotlib\n",
     "%matplotlib inline\n",
     "\n",
-    "import sys\n",
-    "\n",
-    "from model_analysis_folders import all_model_info, color_model_info\n",
+    "from model_analysis_folders import color_model_info\n",
     "\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
     "matplotlib.rcParams['ps.fonttype'] = 42\n",
     "\n",
-    "import scipy.stats\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "\n",
-    "from notebooks.aud_fmri_notebook_helpers import * \n",
-    "from notebooks.notebook_helpers import responses_network_by_layer_mat, combined_experiment_response_dictionaries, unpack_experiment_mat\n",
+    "from notebooks.aud_fmri_notebook_helpers import *\n",
+    "from notebooks.notebook_helpers import responses_network_by_layer_mat, combined_experiment_response_dictionaries, \\\n",
+    "    unpack_experiment_mat\n",
     "\n",
     "import urllib\n",
     "import json"
@@ -73,30 +63,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_list = [1,3,4,6,7,8]\n",
+    "experiment_list = [1, 3, 4, 6, 7, 8]\n",
     "\n",
     "all_experiment_dictionaries = []\n",
     "\n",
     "for exp_num in experiment_list:\n",
-    "    experiment_name = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['paper_experiment_name']\n",
-    "    jsin_configs = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d'%exp_num]['experiment_params_web']\n",
+    "    experiment_name = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num][\n",
+    "        'paper_experiment_name']\n",
+    "    jsin_configs = all_model_info.TURK_AUDIO_EXPERIMENTS_GROUPINGS['experiment_%d' % exp_num]['experiment_params_web']\n",
     "\n",
     "    with urllib.request.urlopen(jsin_configs) as url:\n",
     "        experiment_params = json.loads(url.read().decode())\n",
     "\n",
     "    plot_model_order = experiment_params['experiment_info']['networks']\n",
-    "    \n",
+    "\n",
     "    exp_response_dict = {}\n",
     "    for n_idx, network in enumerate(experiment_params['experiment_info']['networks']):\n",
     "        participant_data_matrix, model_layers, conditions, participants = unpack_experiment_mat(\n",
-    "            '../AuditoryBehavioralExperiments/EXPERIMENT_%d/AudioExperiment%d_network_vs_humans_datamatrix_%s_public.mat'%(exp_num, exp_num, network))\n",
-    "        \n",
-    "        exp_response_dict[network] = responses_network_by_layer_mat(participant_data_matrix, model_layers, conditions, experiment_params)\n",
+    "            '../AuditoryBehavioralExperiments/EXPERIMENT_%d/AudioExperiment%d_network_vs_humans_datamatrix_%s_public.mat' % (\n",
+    "            exp_num, exp_num, network))\n",
+    "\n",
+    "        exp_response_dict[network] = responses_network_by_layer_mat(participant_data_matrix, model_layers, conditions,\n",
+    "                                                                    experiment_params)\n",
     "\n",
     "    all_experiment_dictionaries.append(exp_response_dict)\n",
     "\n",
-    "combined_experiment_dict = combined_experiment_response_dictionaries(all_experiment_dictionaries)\n",
-    "   "
+    "combined_experiment_dict = combined_experiment_response_dictionaries(all_experiment_dictionaries)\n"
    ]
   },
   {
@@ -136,12 +128,13 @@
    ],
    "source": [
     "save_best_layer_names = plot_roi_analysis_for_models(models_to_plot,\n",
-    "                             model_colors,\n",
-    "                             model_style_dict,\n",
-    "                             all_networks_and_layers,\n",
-    "                             combined_experiment_dict,\n",
-    "                             roi_names=['all_aud_voxels'] + ['tonotopic', 'pitch', 'music', 'speech'],\n",
-    "                                   )"
+    "                                                     model_colors,\n",
+    "                                                     model_style_dict,\n",
+    "                                                     all_networks_and_layers,\n",
+    "                                                     combined_experiment_dict,\n",
+    "                                                     roi_names=['all_aud_voxels'] + ['tonotopic', 'pitch', 'music',\n",
+    "                                                                                     'speech'],\n",
+    "                                                     )"
    ]
   },
   {
@@ -181,21 +174,15 @@
    ],
    "source": [
     "save_best_layer_names = plot_roi_analysis_for_models(models_to_plot,\n",
-    "                             model_colors,\n",
-    "                             model_style_dict,\n",
-    "                             all_networks_and_layers,\n",
-    "                             combined_experiment_dict,\n",
-    "                             roi_names=['all_aud_voxels'] + ['tonotopic', 'pitch', 'music', 'speech'],\n",
-    "                             analysis_type='rsa',\n",
-    "                                   )\n"
+    "                                                     model_colors,\n",
+    "                                                     model_style_dict,\n",
+    "                                                     all_networks_and_layers,\n",
+    "                                                     combined_experiment_dict,\n",
+    "                                                     roi_names=['all_aud_voxels'] + ['tonotopic', 'pitch', 'music',\n",
+    "                                                                                     'speech'],\n",
+    "                                                     analysis_type='rsa',\n",
+    "                                                     )\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
